# fact-reversal-experiment

./: PAPER.md  README.md  pyproject.toml
fact_reversal/: __init__.py  data.py  main.py  models.py  train.py
tests/: __init__.py  test_data.py  test_integration.py  test_models.py
